# traccar-geocoder

./: README.md  docker-compose.yml
builder/src/: build_index.cpp
server/: Cargo.toml
server/src/: auth.rs  main.rs
server/src/web/: dashboard.html
